fixed member image styles so the image is cropped to keep 5:6 aspect ratio

--- a/wp-content/custom-code/shared/css/styles.css
+++ b/wp-content/custom-code/shared/css/styles.css
@@ -450,7 +450,9 @@ button {
     max-width: 250;
     max-height: 300;
     width: 100%;
-    height: auto;
+    aspect-ratio: 5 / 6;
+    object-fit: cover;
+    object-position: center;
     margin-bottom: var(--member-image-margin-bottom);
     margin-top: 0;
 }
